flux/apps/miniflux/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: miniflux

spec:
  selector:
    matchLabels:
      app: miniflux

  replicas: 1
  template:
    metadata:
      labels:
        app: miniflux

    spec:
      containers:
        - name: miniflux
          image: ghcr.io/miniflux/miniflux:2.2.18-distroless
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /
              port: http

          readinessProbe:
            httpGet:
              path: /
              port: http

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault

          resources:
            requests:
              memory: "48Mi"
            limits:
              memory: "256Mi"
